--- a/WeMake/Base.lproj/Main.storyboard
+++ b/WeMake/Base.lproj/Main.storyboard
@@ -9,8 +9,8 @@
             <objects>
                 <viewController id="xbO-tO-2hg" customClass="WMViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ke6-S8-8PD"/>
-                        <viewControllerLayoutGuide type="bottom" id="tpH-tE-M2R"/>
+                        <viewControllerLayoutGuide type="top" id="Jcg-NL-6Ow"/>
+                        <viewControllerLayoutGuide type="bottom" id="3Vd-uJ-51s"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ITi-CC-OFw">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -82,8 +82,8 @@
             <objects>
                 <viewController storyboardIdentifier="Feed" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vXZ-lx-hvc" customClass="WMFeedViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="EE5-tt-Bf3"/>
-                        <viewControllerLayoutGuide type="bottom" id="OV2-2E-DwR"/>
+                        <viewControllerLayoutGuide type="top" id="IXZ-BF-PEt"/>
+                        <viewControllerLayoutGuide type="bottom" id="z5h-yF-O4b"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -165,7 +165,7 @@
                                                     <color key="textColor" red="0.83137254900000002" green="0.83137254900000002" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZlU-oR-zzY">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZlU-oR-zzY">
                                                     <rect key="frame" x="5" y="375" width="310" height="75"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -217,8 +217,8 @@
             <objects>
                 <viewController storyboardIdentifier="Camera" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cVa-bO-kS4" customClass="WMCameraViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="OpB-D9-TXL"/>
-                        <viewControllerLayoutGuide type="bottom" id="r7v-6K-KTI"/>
+                        <viewControllerLayoutGuide type="top" id="Yqk-kg-QwH"/>
+                        <viewControllerLayoutGuide type="bottom" id="ebG-jX-NAj"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VDo-lM-Db9">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -388,8 +388,8 @@
             <objects>
                 <viewController storyboardIdentifier="Review" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1tk-5V-gFP" customClass="WMReviewViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="5Ke-lz-EVj"/>
-                        <viewControllerLayoutGuide type="bottom" id="JB2-BC-DDS"/>
+                        <viewControllerLayoutGuide type="top" id="Ido-Hd-4be"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ds5-Z3-FWS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="sFS-Q6-3En">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -438,8 +438,8 @@
             <objects>
                 <viewController storyboardIdentifier="Request" useStoryboardIdentifierAsRestorationIdentifier="YES" id="NfC-rA-knd" customClass="WMRequestViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="7cP-hY-fB7"/>
-                        <viewControllerLayoutGuide type="bottom" id="NxW-UJ-7aV"/>
+                        <viewControllerLayoutGuide type="top" id="RrD-ez-U5T"/>
+                        <viewControllerLayoutGuide type="bottom" id="SVM-B1-Jpu"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="A1p-86-Tws">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -538,8 +538,8 @@
             <objects>
                 <viewController storyboardIdentifier="Post" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sFY-Md-A5G" customClass="WMPostViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="XHr-zf-8jR"/>
-                        <viewControllerLayoutGuide type="bottom" id="LAF-9f-Ude"/>
+                        <viewControllerLayoutGuide type="top" id="og2-Fi-wq1"/>
+                        <viewControllerLayoutGuide type="bottom" id="Yz9-89-grK"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VF1-8c-cg0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -617,8 +617,8 @@
             <objects>
                 <viewController storyboardIdentifier="Upload" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0z4-H2-NKP" customClass="WMUploadViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Hca-Mi-m13"/>
-                        <viewControllerLayoutGuide type="bottom" id="cer-a8-Aw0"/>
+                        <viewControllerLayoutGuide type="top" id="TIy-lr-brL"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Ok-cx-j87"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="7Y3-0p-syB" userLabel="View" customClass="UIScrollView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -635,8 +635,8 @@
             <objects>
                 <viewController id="Jov-jq-qaX" customClass="WMLoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="4Gf-Bn-MCU"/>
-                        <viewControllerLayoutGuide type="bottom" id="FAS-jr-gtz"/>
+                        <viewControllerLayoutGuide type="top" id="890-k8-RWh"/>
+                        <viewControllerLayoutGuide type="bottom" id="H7g-Nv-MFd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fqQ-3l-icv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -756,8 +756,8 @@
             <objects>
                 <viewController restorationIdentifier="Notification" storyboardIdentifier="Notification" id="Hxa-wS-fqj" customClass="WMNotificationViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="M7Y-kh-Dag"/>
-                        <viewControllerLayoutGuide type="bottom" id="Edv-YU-xh6"/>
+                        <viewControllerLayoutGuide type="top" id="oZ0-Cw-HnH"/>
+                        <viewControllerLayoutGuide type="bottom" id="OZI-Rv-nnT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="I1H-Rx-oEp">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
