--- a/WeMake/Base.lproj/Main.storyboard
+++ b/WeMake/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4488.2" systemVersion="13A524d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="xbO-tO-2hg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4488.2" systemVersion="13A558" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="xbO-tO-2hg">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3715.3"/>
     </dependencies>
@@ -179,6 +179,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
+                                            <outlet property="caption" destination="ZlU-oR-zzY" id="zsG-oM-U8e"/>
                                             <outlet property="commentsIcon" destination="P7Y-4g-Dhg" id="t8C-l7-Pe4"/>
                                             <outlet property="commentsLabel" destination="LMu-XK-ili" id="z1W-4U-sbt"/>
                                             <outlet property="creatorView" destination="qMh-bN-3Y6" id="iPd-uc-Iki"/>
